Fix: detail 내 상세이미지  image-rendering: -webkit-optimize-contrast; 추가

--- a/css/module/product/bvoat/detail.scss
+++ b/css/module/product/bvoat/detail.scss
@@ -750,7 +750,7 @@
                 min-width: 200px;
                 backface-visibility: hidden;
                 transform: translateZ(0);
-                object-fit: cover;
+                image-rendering: -webkit-optimize-contrast;
             }
 
             iframe {
